Vendor prefixes for correct overflow scrolling

--- a/_src/assets/styles/components/content.scss
+++ b/_src/assets/styles/components/content.scss
@@ -7,5 +7,6 @@
   padding-right: $slider-offset * -4;
   padding-left: $slider-offset * -2;
 
-  overflow-scroll: touch;
+  overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
 }
